--- a/AdobeColdFusion/Dockerfile
+++ b/AdobeColdFusion/Dockerfile
@@ -6,7 +6,7 @@ USER root
 RUN apt-get update && apt-get install wget libstdc++5 -y
 
 ADD installer.properties /opt/installer.properties
-ENV COLD_FUSION_URL = "##changeurl here"/coldfusion-801-lin64.bin?dl=0;
+ENV COLD_FUSION_URL = http://trials.adobe.com/Applications/ColdFusion/801WWE/coldfusion-801-lin64.bin;
 RUN wget -O /opt/coldfusion-801-lin64.bin -q --no-check-certificate $COLD_FUSION_URL && chmod +x /opt/coldfusion-801-lin64.bin && /opt/./coldfusion-801-lin64.bin -i silent -f /opt/installer.properties
 
 EXPOSE 8500
